@@ -1,3 +1,10 @@
+2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/agentes/module_manager_editor_prediction.php: Fixed bug
+	in prediction modules editor.
+	
+	Merged from braches.
+
 2013-01-09  Sergio Martin <sergio.martin@artica.es>
 
 	* pandoradb_data.sql
